src/z80asm/z80asm2/t/40-syntax/expected/module_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/module_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/40-syntax/input/module_01.asm...
t/40-syntax/input/module_01.asm:1:7: error: Identifier expected
    module
          ^
t/40-syntax/input/module_01.asm:2:8: error: Identifier expected
    module ,
           ^
t/40-syntax/input/module_01.asm:4:10: error: Unexpected token: ","
    module a1,
             ^
t/40-syntax/input/module_01.asm:5:10: error: Unexpected token: ","
    module a1,a2
             ^
t/40-syntax/input/module_01.asm:6:10: error: Unexpected token: ","
    module a1,a2,a3
             ^
Program
    ModuleStmt
        Location: t/40-syntax/input/module_01.asm:3:1
        Name: a1
